--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,6 +58,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/montserrat"
+        android:gravity="center"
         android:text="ON GOING ALL OUT"
         android:textColor="@android:color/background_light"
         android:textSize="22sp"
